# Temple-Run-Like

./: CMakeLists.txt  README.md  README.md.backup  clean_build.sh  clean_cmakefiles.sh  cmake_debug_run.sh  cmake_debug_simple.sh  cmake_release_run.sh  cmake_release_simple.sh  make_run.sh  run_game.sh  run_test.sh  valgrind_lunch.sh
include/: Animation.hpp  AnimationCompo.hpp  Button.hpp  Coin.hpp  Entity.hpp  Game.hpp  GameState.hpp  GameStateConfig.hpp  GameoverMenu.hpp  GeneInc.hpp  Gui.hpp  HelpState.hpp  HitboxCompo.hpp  MainMenuState.hpp  MovementCompo.hpp  Obstacle.hpp  PauseMenu.hpp  Player.hpp  SettingState.hpp  State.hpp
resources/: gamestate_initkeybinds.ini
src/: Animation.cpp  AnimationCompo.cpp  Button.cpp  Coin.cpp  Entity.cpp  Game.cpp  GameState.cpp  GameoverMenu.cpp  Gui.cpp  HelpState.cpp  HitboxCompo.cpp  MainMenuState.cpp  MovementCompo.cpp  Obstacle.cpp  PauseMenu.cpp  Player.cpp  SettingState.cpp  State.cpp  main.cpp
tests/: tests.cpp
